[tool.poetry]
name = "pygame-city-builder"
version = "0.1.0"
description = ""
authors = ["Acidicts <111660544+Acidicts@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.6.0"
pathfinding = "^1.0.10"
noise = "^1.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
